src/App.css
@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
@import "tailwindcss";

@theme {
    --font-shareTech: "Share Tech", sans-serif;
    --animate-modal-fade: modal-fade 0.5s ease-in forwards;
    --breakpoint-special: 70.875rem;

    @keyframes modal-fade {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
    }
}

.hero-container {
    padding-top: clamp(5rem, 20vw, 27.5rem);
    padding-bottom: clamp(5rem, 20vw, 27.5rem);
    gap: clamp(5rem, 20vw, 12.5rem);
}

.featured-project, .featured-experience {
    width: clamp(20rem, 20vw, 25.5rem);
}

h2, .personal-overview-container, .featured-projects-container, .featured-experience-container, .contact-information-container {
    width: clamp(20rem, 65vw, 81.5rem);
}

.personal-overview-text, .personal-overview-skills {
    width: clamp(20rem, 30vw, 38.2rem);
}

.featured-section {
    padding-top: clamp(5rem, 15vw, 12.5rem);
    padding-bottom: clamp(5rem, 15vw, 12.5rem);
}

.modal-pop-up {
    width: clamp(20rem, 50vw, 35rem);
    height: clamp(20rem, 200vw, 40rem);
}

.modal-pop-up::backdrop {
    background-color: black;
}

.contact-information {
    gap: clamp(2rem, 10vw, 12.5rem);
}

